feat(indexer): classify comment content (#427)
* feat(indexer): classify comment content

* fix: schema

* fix: make the column non nullable

* feat(sdk): return moderation classifier result from api

* chore: shelter the moderation and classification in one service

* fix: add optimistic responses

* chore: changeset

* chore: make classifier optional

* build: remove unnecessary env variable

* chore: update docs

* feat: exclude comments with specific moderation labels

* fix: test

* chore: update docs

* chore: remove unused import

* chore: add indexer docs

* feat: filter by moderation score

* feat: comment edit moderation (#429)

* feat: independent classification

* build: add env variables

* fix: remove only from test

* chore: rename query param

* feat: add new params to sdk

* chore: update docs

* fix: test
