# apps/indexer/ponder.schema.ts
@@ -1,9 +1,10 @@
-import { index, onchainTable, relations } from "ponder";
+import { index, onchainTable, relations, sql } from "ponder";
 import type {
   IndexerAPICommentReferencesSchemaType,
   IndexerAPICommentZeroExSwapSchemaType,
 } from "@ecp.eth/sdk/indexer/schemas";
 import type { IndexerAPIMetadataSchemaType } from "@ecp.eth/sdk/indexer/schemas";
+import type { CommentModerationLabelsWithScore } from "./src/services/types";
 
 export const comment = onchainTable(
   "comment",
@@ -32,8 +33,14 @@ export const comment = onchainTable(
       .default("pending")
       .notNull(),
     moderationStatusChangedAt: t.timestamp({ withTimezone: true }).notNull(),
+    moderationClassifierResult: t
+      .jsonb()
+      .notNull()
+      .$type<CommentModerationLabelsWithScore>(),
+    // keeps the highest score of the moderation labels, can be used to find out if there is any label
+    // that has higher score than the threshold
+    moderationClassifierScore: t.doublePrecision().notNull().default(0),
     revision: t.integer().notNull().default(0),
-    // find a way to define the column value as object or null
     zeroExSwap: t.jsonb().$type<IndexerAPICommentZeroExSwapSchemaType | null>(),
     references: t
       .jsonb()
@@ -60,12 +67,47 @@ export const comment = onchainTable(
     deletedAtIdx: index().on(table.deletedAt),
     authorIdx: index().on(table.author),
     moderationStatusIdx: index().on(table.moderationStatus),
+    moderationClassifierScoreIdx: index().on(table.moderationClassifierScore),
+    moderationClassifierResultIdx: index().using(
+      "gin",
+      table.moderationClassifierResult,
+    ),
     rootCommentIdIdx: index().on(table.rootCommentId),
     channelIdIdx: index().on(table.channelId),
     commentTypeIdx: index().on(table.commentType),
     referencesResolutionStatusIdx: index().on(table.referencesResolutionStatus),
     referencesResolutionStatusChangedAtIdx: index().on(
       table.referencesResolutionStatusChangedAt,
+    ),
+    moderationHarassmentScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'harassment')::float)`,
+    ),
+    moderationHateScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'hate')::float)`,
+    ),
+    moderationHateThreateningScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'hate_threatening')::float)`,
+    ),
+    moderationLlmGeneratedScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'llm_generated')::float)`,
+    ),
+    moderationSelfHarmScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'self_harm')::float)`,
+    ),
+    moderationSexualMinorsScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'sexual_minors')::float)`,
+    ),
+    moderationSexualScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'sexual')::float)`,
+    ),
+    moderationSpamScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'spam')::float)`,
+    ),
+    moderationViolenceScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'violence')::float)`,
+    ),
+    moderationViolenceGraphicScoreIdx: index().on(
+      sql`((${table.moderationClassifierResult}->>'violence_graphic')::float)`,
     ),
   }),
 );
